Added link to asteroids game

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Daniel's Webpage</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Check out my <a href="/asteroids/">Asteroids game!!</a></p>
 </body>
 </html>
