Testing Website html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Daniel's Webpage</h1>
-<p>Check out my <a href="/asteroids/">Asteroids game!!</a></p>
-</body>
+    <head>
+        <Title>Daniel's Coding Page</Title>
+    </head>
+    <body>
+        <h1>Daniel's Webpage</h1>
+        <br/>
+        <p>Check out my <a href="/asteroids/" target="_blank">Asteroids game!!</a></p>
+        <img src="preview.jpeg">
+    </body>
 </html>
